outputs/main/reevo-qd_bpp_online_2025-07-25_06-46-53/problem_iter1_response13.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 28
    priority = np.where(~exact_fit_bins, 1 / (bins_remain_cap::-1)[::-1] + 1e-6, priority)
                                                             ^
SyntaxError: invalid syntax
5
1
38.03910001730775
69.87170528764138
60
